# Civic-Dude

./: .gitignore  README.md  pyproject.toml
contrib/: dotnet_scraper.ipynb  hello.py  pyproject.toml  scraper.ipynb
contrib/scrapy/: README.md
contrib/scrapy/legistar/: items.py  middlewares.py  pipelines.py  scrapy.cfg  settings.py
contrib/scrapy/legistar/legistar/: pipelines.py  settings.py
contrib/scrapy/legistar/spiders/: MeetingsSpider.py
