[project]
name = "civic-doody"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "feedparser>=6.0.12",
    "ipykernel>=6.30.1",
    "pandas>=2.3.2",
    "requests>=2.32.5",
]

# [tool.uv.workspace]
# members = ["contrib/scrapy"]
